--- a/Langgraph/Basics-1.ipynb
+++ b/Langgraph/Basics-1.ipynb
@@ -12,11 +12,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6718163e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'iam testing for git'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"iam testing for git\""
+   ]
   },
   {
    "cell_type": "code",
@@ -37,7 +50,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "agenticai (3.12.11)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
